# bulbdialclock

./: Cargo.toml  README  README.md
.cargo/: config.toml
.github/workflows/: bloat.yml  build.yml  doc.yml
avr-specs/: avr-atmega168.json
src/: ds3231.rs  main.rs  panic.rs  pc_sync.rs  rtc.rs  settings.rs  time.rs  timer.rs
