[package]
name = "bulbdialclock"
version = "0.1.0"
authors = ["Jamie Wilkinson <jaq@spacepants.org>"]
edition = "2021"
license = "GPL-2.0"

[[bin]]
name = "bulbdialclock"
test = false
bench = false

[dependencies]
panic-abort = "0.3.2"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.6"
usize_conversions = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["nano168"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["atmega168"]

[dependencies.avr-device]
version = "0.4.0"
features = ["atmega168"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"
