[package]
name = "bulbdialclock"
version = "0.1.0"
authors = ["Jamie Wilkinson <jaq@spacepants.org>"]
edition = "2021"
license = "GPL-2.0"

[[bin]]
name = "bulbdialclock"
test = false
bench = false

[dependencies]
panic-serial = { version = "0.1.2", features = ["full"] }
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.6"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["nano168"]

[dependencies.avr-device]
version = "0.5.0"
features = ["atmega168"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"
